@@ -1,4 +1,8 @@
 2017-07-09  Kubo Takehiro <kubo@jiubao.org>
+	* ext/oci8/apiwrap.yml, ext/oci8/oci8.c, lib/oci8/oci8.rb:
+	    Delete unused code using OCILogon2 and OCILogoff.
+
+2017-07-09  Kubo Takehiro <kubo@jiubao.org>
 	* ext/oci8/error.c: Delete OCIError#initialize defined by C code
 	    to suppress warning: method redefined; discarding old initialize.
 	    (github issue #168)
